--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TicTacToe! by HungryBlueDev</title>
+    <meta name="title" content="TicTacToe! by HungryBlueDev" />
+    <meta
+      name="description"
+      content="The classic TicTacToe playable on a browser on any device. It also works offline!"
+    />
+
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://hungrybluedev.github.io/tictactoe2/"
+    />
+    <meta property="og:title" content="TicTacToe! by HungryBlueDev" />
+    <meta
+      property="og:description"
+      content="The classic TicTacToe playable on a browser on any device. It also works offline!"
+    />
+    <meta property="og:image" content="img/screenshot.png" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://hungrybluedev.github.io/tictactoe2/"
+    />
+    <meta property="twitter:title" content="TicTacToe! by HungryBlueDev" />
+    <meta
+      property="twitter:description"
+      content="The classic TicTacToe playable on a browser on any device. It also works offline!"
+    />
+    <meta property="twitter:image" content="img/screenshot.png" />
+
     <link rel="stylesheet" href="css/default.css" />
   </head>
   <body>
