update links to preview image

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
       property="og:description"
       content="The classic TicTacToe playable on a browser on any device. It also works offline!"
     />
-    <meta property="og:image" content="img/screenshot.png" />
+    <meta
+      property="og:image"
+      content="https://hungrybluedev.github.io/tictactoe2/img/screenshot.png"
+    />
 
     <meta property="twitter:card" content="summary_large_image" />
     <meta
@@ -32,7 +35,10 @@
       property="twitter:description"
       content="The classic TicTacToe playable on a browser on any device. It also works offline!"
     />
-    <meta property="twitter:image" content="img/screenshot.png" />
+    <meta
+      property="twitter:image"
+      content="https://hungrybluedev.github.io/tictactoe2/img/screenshot.png"
+    />
 
     <link rel="stylesheet" href="css/default.css" />
   </head>
