change png to compressed webp

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <meta
       property="og:image"
-      content="https://hungrybluedev.github.io/tictactoe2/img/screenshot.png"
+      content="https://hungrybluedev.github.io/tictactoe2/img/screenshot.webp"
     />
 
     <meta property="twitter:card" content="summary_large_image" />
@@ -37,7 +37,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://hungrybluedev.github.io/tictactoe2/img/screenshot.png"
+      content="https://hungrybluedev.github.io/tictactoe2/img/screenshot.webp"
     />
 
     <link rel="stylesheet" href="css/default.css" />
