change button size to rem and make them bigger

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
       <div class="buttonpanel">
         <button id="button-reset" aria-label="Reset">
-          <svg width="40px" height="40px" viewBox="0 0 1080 1080">
+          <svg width="2.5rem" height="2.5rem" viewBox="0 0 1080 1080">
             <rect x="0" y="0" width="1080" height="1080" style="fill: none" />
             <g>
               <g transform="matrix(0.791304,0,0,0.791304,112.696,112.696)">
@@ -101,7 +101,12 @@
           </svg>
         </button>
         <button id="button-cycle" aria-label="Cycle">
-          <svg width="40px" height="40px" viewBox="0 0 1080 1080" id="hvh-icon">
+          <svg
+            width="2.5rem"
+            height="2.5rem"
+            viewBox="0 0 1080 1080"
+            id="hvh-icon"
+          >
             <rect x="0" y="0" width="1080" height="1080" style="fill: none" />
             <g>
               <g
@@ -178,7 +183,12 @@
               </g>
             </g>
           </svg>
-          <svg width="40px" height="40px" viewBox="0 0 1080 1080" id="hvc-icon">
+          <svg
+            width="2.5rem"
+            height="2.5rem"
+            viewBox="0 0 1080 1080"
+            id="hvc-icon"
+          >
             <rect
               id="Artboard1"
               x="0"
@@ -254,7 +264,7 @@
           </svg>
         </button>
         <button id="button-about" aria-label="About">
-          <svg width="40px" height="40px" viewBox="0 0 1080 1080">
+          <svg width="2.5rem" height="2.5rem" viewBox="0 0 1080 1080">
             <rect
               id="Artboard1"
               x="0"
